--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,14 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # 用户添加: 电机与编码器处理逻辑
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/motor.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/pid.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/ina226.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/myiic.c
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/uart_command.c
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/ADS1220.c
+)
+
+target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
+    -u _printf_float
 )
 
 # Link directories setup
