创建比较完整的项目结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,11 +43,12 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # 用户添加: 电机与编码器处理逻辑
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/motor.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/pid.c
-
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/uart_command.c
-
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/ADS1220.c
-)
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/tof.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/track.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/car_control.c
+    )
 
 target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
     -u _printf_float
