妥协并放弃%f 加入龙伯格观测器来观测电机转速取代以前的pll 初步调好电脑速度环

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,9 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
 
     )
 
-target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
-    -u _printf_float
-)
+# target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
+#     -u _printf_float
+# )
 
 # Link directories setup
 target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
