--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,9 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/icm42688.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/ssd1306.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/ssd1306_fonts.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/oled_display.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/oled_service.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/param_server.c
+
 
     )
 
